Fixes content overflowing width

--- a/style.css
+++ b/style.css
@@ -145,8 +145,8 @@ html,body{height: 100%;}.pure-container{position:relative;height:100%;-webkit-ov
   .col, .post-icon, .main, .col.share {
     margin-left:0%;
   }
-  .content, .main {
-    width: 57%;
+  .main {
+    width: 73%;
   }
   .post-icon {
     width: 14.25%;
@@ -157,6 +157,7 @@ html,body{height: 100%;}.pure-container{position:relative;height:100%;-webkit-ov
   }
   .content {
     margin-left: 53%;
+    width: 47%;
   }
   .pagination.row, .footer.row {
     margin-left: 61.76%;
